// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should get 1 expense and its amount 1`] = `
<div>
  <p>
    Viewing 
    1
     
    expense
     totalling: 
    $1.93
    .
  </p>
</div>
`;

exports[`should get correct number of expenses viewed and the total amount 1`] = `
<div>
  <p>
    Viewing 
    3
     
    expenses
     totalling: 
    $191,752.17
    .
  </p>
</div>
`;
